--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="images/kp-logo-white-copy.png">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>Web Development | Krzysztof Paździor</title>
 </head>
 <body>
@@ -16,6 +16,18 @@
                     <img src="images/kp-logo-white.webp" alt="logo">
                 </a>
             </div>
+            <div class="hamburger">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+            <ul class="mobile-menu">
+                <li><a href="">Home</a></li>
+                <li><a href="#features-anchor" class="mobile-link">Features</a></li>
+                <li><a href="#courses-anchor" class="mobile-link">Pricing</a></li>
+                <li><a href="#contact-anchor" class="mobile-link">Contact</a></li>
+                <li><a class="mobile-button mobile-link">Hire me<i class="bi bi-person-add"></i></a></li>
+            </ul>
             <ul class="nav-links">
                 <li class="link"><a href="#">Home</a></li>
                 <li class="link"><a href="#features-anchor">Features</a></li>
@@ -148,26 +160,26 @@
             <form action="" name="contact-form">
                 <div class="name">
                     <label for="first name">First name</label>
-                    <input type="text" name="first-name" id="first-name" required>
+                    <input type="text" name="first-name" id="first-name" required placeholder="Your name...">
                 </div>
                 <div class="sName">
                     <label for="second name">Second name</label>
-                    <input type="text" name="second-name" id="second-name" required>
+                    <input type="text" name="second-name" id="second-name" required placeholder="Your surname...">
                 </div>
                 <div class="email">
                     <label for="email">Email adress</label>
-                    <input type="email" name="email" id="email" required>
+                    <input type="email" name="email" id="email" required placeholder="Your email...">
                 </div>
                 <div class="phone">
                     <label for="phone">Phone Number</label>
-                    <input type="number" name="phone" id="phone" required>
+                    <input type="number" name="phone" id="phone" required placeholder="Your phone number...">
                 </div>
                 <div class="content-form">
                     <label for="content">Content</label>
-                    <textarea name="content" id="content" rows="5" cols="10" required></textarea>
+                    <textarea name="content" id="content" rows="5" cols="10" required placeholder="Type content..."></textarea>
                     </div>
                     <div class="submit">
-                        <input type="submit" value="Send" class="btn">
+                        <button type="submit" class="btn" id="submit">Send <i class="bi bi-send-check"></i></button>
                     </div>
                 
             </form>
