--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="#features-anchor" class="mobile-link">Features</a></li>
                 <li><a href="#courses-anchor" class="mobile-link">Pricing</a></li>
+                <li><a href="#gallery-anchor" class="mobile-link">Gallery</a></li>
                 <li><a href="#contact-anchor" class="mobile-link">Contact</a></li>
                 <li><a class="mobile-button mobile-link">Hire me<i class="bi bi-person-add"></i></a></li>
             </ul>
@@ -32,6 +33,7 @@
                 <li class="link"><a href="#">Home</a></li>
                 <li class="link"><a href="#features-anchor">Features</a></li>
                 <li class="link"><a href="#courses-anchor">Pricing</a></li>
+                <li class="link"><a href="#gallery-anchor">Gallery</a></li>
                 <li class="link"><a href="#contact-anchor">Contact</a></li>
             </ul>
             <button class="btn">
@@ -154,6 +156,44 @@
             </div>
         </div>
     </section>
+    <div class="anchor" id="gallery-anchor"></div>
+    <section class="container gallery-area">
+        <h2>Projects Gallery</h2>
+        <div class="gallery-posts">
+            <div class="gallery-card">
+                <img src="" alt="">
+                <h4>Rescript</h4>
+                <p>Rescript is a great tool to create websites in HTML. Use library full of components and implement them into projects. It has been designed in a way to work in every browser and on every platform.</p>
+                <div class="link">
+                    <a href="https://krzyspazdzior.github.io/Grand-Project/index.html">Visit Page</a>
+                </div>
+            </div>
+            <div class="gallery-card">
+                <img src="" alt="">
+                <h4>Prototype</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum labore similique optio earum perspiciatis fugit, nisi suscipit accusamus necessitatibus minima.</p>
+                <div class="link">
+                    <a href="#">Visit Page</a>
+                </div>
+            </div>
+            <div class="gallery-card">
+                <img src="" alt="">
+                <h4>Egg Hunt</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum labore similique optio earum perspiciatis fugit, nisi suscipit accusamus necessitatibus minima.</p>
+                <div class="link">
+                    <a href="#">Visit Page</a>
+                </div>
+            </div>
+            <div class="gallery-card">
+                <img src="" alt="">
+                <h4>Rescript</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum labore similique optio earum perspiciatis fugit, nisi suscipit accusamus necessitatibus minima.</p>
+                <div class="link">
+                    <a href="#">Visit Page</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="anchor" id="contact-anchor"></div>
     <section class="container contact-area">
         <h2>Contact</h2>
@@ -198,8 +238,8 @@
             <li><a href="">Accessibility</a></li>
         </ul>
         <ul>
-            <h3>Page Bugs</h3>
-            <li><a href="">Help center</a></li>
+            <h3>Help center</h3>
+            <li><a href="">Page Bugs</a></li>
             <li><a href="">Report bugs</a></li>
             <li><a href="">Faq</a></li>
         </ul>
