Gallery hover + grid working

--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,18 @@
     </nav>
     <section class="container gallery-container">
         <div class="gallery-card">
-            <img src="images/Screenshot 2024-04-12 at 16.42.12.png" alt="">
+            <h3>Rescript</h3>
+            <img src="images/Screenshot 2024-04-12 at 16.42.12.png" alt="" class="gallery-img">
+            <button class="gallery-btn">Visit Site</button>
+        </div>
+        <div class="gallery-card">
+            <h3>Prototype</h3>
+            <img src="images/Prototype.png" alt="" class="gallery-img">
+            <button class="gallery-btn">Visit Site</button>
+        </div>
+        <div class="gallery-card">
+            <h3>Egg Collectors</h3>
+            <img src="images/Egg_collectors.png" alt="" class="gallery-img">
             <button class="gallery-btn">Visit Site</button>
         </div>
     </section>
