--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                     Hire me to create a website for your personal usage. Using my knowlage about libraries and advanced frameworks I can make your page even more attractive for your future customers.
                 </p>
                 <div class="btn-area">
-                    <button class="btn features-btn">
-                        Learn More <i class="bi bi-arrow-right"></i>
-                    </button>
+                    <a href="gallery.html">
+                        <button class="btn features-btn">
+                            Learn More <i class="bi bi-arrow-right"></i>
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="card">
