--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
                 <li><a href="">Home</a></li>
                 <li><a href="#features-anchor" class="mobile-link">Features</a></li>
                 <li><a href="#courses-anchor" class="mobile-link">Pricing</a></li>
+                <li><a href="#carrier-anchor" class="mobile-link">Career</a></li>
                 <li><a href="#contact-anchor" class="mobile-link">Contact</a></li>
-                <li><a class="mobile-button mobile-link">Hire me<i class="bi bi-person-add"></i></a></li>
+                <li><a  href="gallery.html" class="mobile-button mobile-link">My Projects <i class="bi bi-file-earmark-person"></i></a></li>
             </ul>
             <ul class="nav-links">
                 <li class="link"><a href="#">Home</a></li>
                 <li class="link"><a href="#features-anchor">Features</a></li>
                 <li class="link"><a href="#courses-anchor">Pricing</a></li>
+                <li class="link"><a href="#carrier-anchor">Career</a></li>
                 <li class="link"><a href="#contact-anchor">Contact</a></li>
+                
             </ul>
-            <button class="btn">
-            Hire Me <i class="bi bi-person-add"></i>
-            </button>
+            <a href="gallery.html">
+                <button class="btn">
+                    My Projects <i class="bi bi-file-earmark-person"></i>
+                </button>
+            </a>
     </nav>
     <header class="container">
         <div class="content">
@@ -155,6 +160,48 @@
                 <p>Click on the plan of your choice to join</p>
             </div>
         </div>
+        <div class="anchor" id="carrier-anchor"></div>
+        <section class="container carrier-area">
+            <h2>My Career</h2>
+            <table>
+                <tr>
+                    <td>n.</td>
+                    <td>Year</td>
+                    <td class="table-desc">Description</td>
+                    <td>Revenue</td>
+                </tr>
+                <tr>
+                    <td>1. </td>
+                    <td>2020</td>
+                    <td class="table-desc">I learned the basics of my first proggraming language - Python. I also learned a lot about the rules in coding in general.</td>
+                    <th>0$</th>
+                </tr>
+                <tr>
+                    <td>2. </td>
+                    <td>2021</td>
+                    <td class="table-desc">I discovered HTML and CSS, and learned all about them. I also enlarged my knowledge with Javascript to create more intresting websites.</td>
+                    <th>0$</th>
+                </tr>
+                <tr>
+                    <td>3. </td>
+                    <td>2022</td>
+                    <td class="table-desc">That year I created my frist big project and sold it to small comapny.</td>
+                    <th>119$</th>
+                </tr>
+                <tr>
+                    <td>4. </td>
+                    <td>2023</td>
+                    <td class="table-desc">I created great projects, while working in bigger groups in companies. I also learned about new languages and libraries</td>
+                    <th>4399$</th>
+                </tr>
+                <tr>
+                    <td>5. </td>
+                    <td>2024</td>
+                    <td class="table-desc">I stopped counting money at this point. I worked in projects for the biggest companies in the world like Apple and Amazon.</td>
+                    <th>1 756 000$</th>
+                </tr>
+            </table>
+        </section>
     </section>
     <div class="anchor" id="contact-anchor"></div>
     <section class="container contact-area">
