--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
             <div class="nav-logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="images/kp-logo-white.webp" alt="logo">
                 </a>
             </div>
@@ -23,20 +23,20 @@
                 <div class="bar3"></div>
             </div>
             <ul class="mobile-menu">
-                <li><a href="">Home</a></li>
-                <li><a href="#features-anchor" class="mobile-link">Features</a></li>
-                <li><a href="#courses-anchor" class="mobile-link">Pricing</a></li>
-                <li><a href="#contact-anchor" class="mobile-link">Contact</a></li>
-                <li><a class="mobile-button mobile-link">Hire me<i class="bi bi-person-add"></i></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="index.html/#mobile-link">Features</a></li>
+                <li><a href="index.html" class="mobile-link">Pricing</a></li>
+                <li><a href="index.html" class="mobile-link">Contact</a></li>
+                <li><a class="mobile-button mobile-link">My Projects <i class="bi bi-file-earmark-person"></i></a></li>
             </ul>
             <ul class="nav-links">
-                <li class="link"><a href="#">Home</a></li>
-                <li class="link"><a href="#features-anchor">Features</a></li>
-                <li class="link"><a href="#courses-anchor">Pricing</a></li>
-                <li class="link"><a href="#contact-anchor">Contact</a></li>
+                <li class="link"><a href="index.html">Home</a></li>
+                <li class="link"><a href="index.html">Features</a></li>
+                <li class="link"><a href="index.html">Pricing</a></li>
+                <li class="link"><a href="index.html">Contact</a></li>
             </ul>
             <button class="btn">
-            Hire Me <i class="bi bi-person-add"></i>
+            My Projects <i class="bi bi-file-earmark-person"></i>
             </button>
     </nav>
     <section class="container gallery-container">
@@ -53,6 +53,16 @@
         <div class="gallery-card">
             <h3>Egg Collectors</h3>
             <img src="images/Egg_collectors.png" alt="" class="gallery-img">
+            <button class="gallery-btn">Visit Site</button>
+        </div>
+        <div class="gallery-card">
+            <h3>Graniczna Garage</h3>
+            <img src="images/Garage.png" alt="" class="gallery-img">
+            <button class="gallery-btn">Visit Site</button>
+        </div>
+        <div class="gallery-card">
+            <h3>Online Calculator</h3>
+            <img src="images/calculator.png" alt="" class="gallery-img">
             <button class="gallery-btn">Visit Site</button>
         </div>
     </section>
